[project]
name = "python-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.11",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.7",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langsmith>=0.9.7",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
    "uuid>=1.30",
]
